--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@
 			href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap"
 			rel="stylesheet"
 		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+			integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+			crossorigin="anonymous"
+			referrerpolicy="no-referrer"
+		/>
 		<style lang="sass">
 			@import url('/sass/main.scss');
 		</style>
@@ -38,5 +45,23 @@
 				</ul>
 			</nav>
 		</header>
+
+		<section class="section-hero">
+			<div class="hero-content">
+				<h1>
+					Medical Software To Attract And <strong>Retain Patients</strong>
+				</h1>
+				<p>
+					Patientgrid’s communication platform helps improve patient experience
+					while staff hours.
+				</p>
+				<button>
+					<span>Start for free</span>
+					<div class="icon">
+						<i class="fa-solid fa-chevron-right"></i>
+					</div>
+				</button>
+			</div>
+		</section>
 	</body>
 </html>
