--- a/index.html
+++ b/index.html
@@ -63,5 +63,9 @@
 				</button>
 			</div>
 		</section>
+
+		<section class="section-dashboard-overview">
+			<div class="dashboard-img"></div>
+		</section>
 	</body>
 </html>
