--- a/index.html
+++ b/index.html
@@ -65,7 +65,41 @@
 		</section>
 
 		<section class="section-dashboard-overview">
-			<div class="dashboard-img"></div>
+			<div class="dashboard-img" role="image"></div>
+		</section>
+
+		<section class="section-about">
+			<div class="about-container">
+				<div class="about-row">
+					<figure class="about-image">
+						<img src="/assets/about-1.png" alt="about-1" />
+					</figure>
+					<div class="about-content">
+						<h2>Bring new business in by getting more online reviews.</h2>
+						<p>94% Use review to choose new doctor.</p>
+					</div>
+				</div>
+
+				<div class="about-row">
+					<div class="about-content">
+						<h2>Save time with collaborative tools and automations.</h2>
+						<p>15+ Staff hours saved per week.</p>
+					</div>
+					<figure class="about-image">
+						<img src="/assets/about-2.png" alt="about-2" />
+					</figure>
+				</div>
+
+				<div class="about-row">
+					<figure class="about-image">
+						<img src="/assets/about-3.png" alt="about-3" />
+					</figure>
+					<div class="about-content">
+						<h2>Improve patient experience engaging the way they want.</h2>
+						<p>90% People prefer texts to phone calls.</p>
+					</div>
+				</div>
+			</div>
 		</section>
 	</body>
 </html>
