html and css wrote for collab overview section

--- a/index.html
+++ b/index.html
@@ -75,14 +75,14 @@
 						<img src="/assets/about-1.png" alt="about-1" />
 					</figure>
 					<div class="about-content">
-						<h2>Bring new business in by getting more online reviews.</h2>
+						<h3>Bring new business in by getting more online reviews.</h3>
 						<p>94% Use review to choose new doctor.</p>
 					</div>
 				</div>
 
 				<div class="about-row">
 					<div class="about-content">
-						<h2>Save time with collaborative tools and automations.</h2>
+						<h3>Save time with collaborative tools and automations.</h3>
 						<p>15+ Staff hours saved per week.</p>
 					</div>
 					<figure class="about-image">
@@ -95,10 +95,29 @@
 						<img src="/assets/about-3.png" alt="about-3" />
 					</figure>
 					<div class="about-content">
-						<h2>Improve patient experience engaging the way they want.</h2>
+						<h3>Improve patient experience engaging the way they want.</h3>
 						<p>90% People prefer texts to phone calls.</p>
 					</div>
 				</div>
+			</div>
+		</section>
+
+		<section class="section-collab-overview">
+			<div class="collab">
+				<div class="collab__content">
+					<h2>Seamless collaboration for healthcare teams</h2>
+					<p>
+						With shared inboxes, any team member can resolve the team’s pending
+						tasks. Individual staff member don’t get overwhelmed and patients
+						are always take care of.
+					</p>
+				</div>
+				<figure class="collab__image">
+					<img
+						src="/assets/dashboard-preview-2.png"
+						alt="dashboard-preview-2"
+					/>
+				</figure>
 			</div>
 		</section>
 	</body>
