html and css wrote for cta section

--- a/index.html
+++ b/index.html
@@ -105,7 +105,9 @@
 		<section class="section-collab-overview">
 			<div class="collab">
 				<div class="collab__content">
-					<h2>Seamless collaboration for healthcare teams</h2>
+					<h2 class="heading-secondary">
+						Seamless collaboration for healthcare teams
+					</h2>
 					<p>
 						With shared inboxes, any team member can resolve the team’s pending
 						tasks. Individual staff member don’t get overwhelmed and patients
@@ -120,5 +122,26 @@
 				</figure>
 			</div>
 		</section>
+
+		<section class="section-cta">
+			<div class="cta">
+				<figure>
+					<img src="/assets/doctor.png" alt="doctor" />
+				</figure>
+				<div class="cta-content">
+					<h2 class="heading-secondary">
+						We work on a month-to-month basis, try for free with no commitments
+					</h2>
+					<p>
+						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+						eiusmod tempor incididunt ut labore et dolore magna aliqua. Nobis
+						natus possimus maiores vitae alias.
+					</p>
+					<a href="#" class="btn btn--secondary">14 Days Free Trial</a>
+				</div>
+			</div>
+		</section>
 	</body>
 </html>
+
+Lorem ipsum dolor, sit amet consectetur adipisicing elit.
