wrote html and styles for footerd

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
 					<h2 class="heading-secondary">
 						Seamless collaboration for healthcare teams
 					</h2>
-					<p>
+					<p class="para-dark">
 						With shared inboxes, any team member can resolve the team’s pending
 						tasks. Individual staff member don’t get overwhelmed and patients
 						are always take care of.
@@ -132,7 +132,7 @@
 					<h2 class="heading-secondary">
 						We work on a month-to-month basis, try for free with no commitments
 					</h2>
-					<p>
+					<p class="para-dark">
 						Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 						eiusmod tempor incididunt ut labore et dolore magna aliqua. Nobis
 						natus possimus maiores vitae alias.
@@ -141,7 +141,70 @@
 				</div>
 			</div>
 		</section>
+
+		<footer class="footer">
+			<div class="footer__row">
+				<!-- 1 -->
+				<div class="footer__column">
+					<img
+						src="/assets/footer-logo.png"
+						alt="footer-logo"
+						style="width: 268px"
+					/>
+					<p class="para-light">
+						Lorem, ipsum dolor sit amet consectetur adipisicing elit. Accusamus
+						ipsam nesciunt quo.
+					</p>
+					<div class="social-icons">
+						<i class="fa-brands fa-facebook-f"></i>
+						<i class="fa-brands fa-twitter"></i>
+						<i class="fa-brands fa-instagram"></i>
+					</div>
+				</div>
+
+				<!-- 2 -->
+				<div class="footer__column">
+					<div>
+						<i class="fa-solid fa-phone"></i>
+						<span>+91-8853923455</span>
+					</div>
+					<div>
+						<i class="fa-brands fa-whatsapp"></i>
+						<span>+91-4567895478</span>
+					</div>
+					<div>
+						<i class="fa-solid fa-envelope"></i>
+						<span>patientgrid@gmail.com</span>
+					</div>
+				</div>
+
+				<!-- 3 -->
+				<div class="footer__column">
+					<p>Subscribe Newsletter</p>
+					<form>
+						<div class="form-group">
+							<input type="email" placeholder="Your Email..." />
+							<button>
+								<div class="icon">
+									<i class="fa-solid fa-chevron-right"></i>
+								</div>
+							</button>
+						</div>
+					</form>
+				</div>
+			</div>
+
+			<!-- 4 -->
+			<nav>
+				<ul>
+					<li><a href="#">Products</a></li>
+					<li><a href="#">Plans</a></li>
+					<li><a href="#">More</a></li>
+				</ul>
+			</nav>
+
+			<!-- 5 -->
+			<p class="copyright">&copy; Copyright 2023, All Rights Reserved.</p>
+		</footer>
 	</body>
 </html>
-
-Lorem ipsum dolor, sit amet consectetur adipisicing elit.
