--- a/index.html
+++ b/index.html
@@ -44,6 +44,12 @@
 					</div>
 				</ul>
 			</nav>
+
+			<!-- mobile nav -->
+			<button class="btn-mobile-nav">
+				<i class="fa-solid fa-bars" name="menu"></i>
+				<i class="fa-solid fa-xmark" name="close"></i>
+			</button>
 		</header>
 
 		<section class="section-hero">
